Safari TP 131 audio canPlayType() reports false negatives https://bugs.webkit.org/show_bug.cgi?id=229799 rdar://problem/82776747

Reviewed by Youenn Fablet.

Source/WebCore:

webaudio now supports the same webm content as the video and audio element,
making this workaround no longer necessary.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType const): Remove work around
* page/RuntimeEnabledFeatures.h:
(WebCore::RuntimeEnabledFeatures::webMParserEnabled const): Remove now unused method.

Source/WebKit:

* Shared/WebPreferencesDefaultValues.cpp:
* Shared/WebPreferencesDefaultValues.h: Remove no longer used method.

Source/WebKitLegacy/mac:

* WebView/WebPreferencesDefaultValues.h:
* WebView/WebPreferencesDefaultValues.mm: Remove no longer used method.

Source/WTF:

* Scripts/Preferences/WebPreferencesExperimental.yaml: Remove preference.


Canonical link: https://commits.webkit.org/241434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282137 268f45cc-cd09-0410-ab3c-d52691b4dbfc