Source/WebKit/Shared/WebPreferencesDefaultValues.cpp
@@ -314,11 +314,6 @@ bool defaultWebMParserEnabled()
     return isFeatureFlagEnabled("webm_parser", true);
 }
 
-bool defaultWebMWebAudioEnabled()
-{
-    return isFeatureFlagEnabled("webm_webaudio", false);
-}
-
 #endif // ENABLE(MEDIA_SOURCE)
 
 #if ENABLE(MEDIA_SESSION_COORDINATOR)
