Source/WebKit/Shared/WebPreferencesDefaultValues.h
@@ -103,7 +103,6 @@ bool defaultVP9SWDecoderEnabledOnBattery();
 
 #if ENABLE(MEDIA_SOURCE)
 bool defaultWebMParserEnabled();
-bool defaultWebMWebAudioEnabled();
 #endif
 
 #if ENABLE(MEDIA_SESSION_COORDINATOR)
